@@ -25,7 +25,7 @@ miscBtnAction.Action.text=&Misc
 miscBtnAction.Action.largeIcon=${iconsPath}miscellanous.gif
 
 
-btnSelectConnectionProxy.Action.text=Configure proxy...*
+btnSelectConnectionProxy.Action.text=Configure proxy...
 
 btnSelectProxyListAction.Action.text=${null}
 btnSelectProxyListAction.Action.shortDescription=Select proxy list
@@ -44,7 +44,7 @@ checkPlaySoundInCaseOfError.text=Play a sound in case of &error
 checkContinueInterrupted.text=Continue with &interrupted downloads when application starts
 
 checkPlaySoundWhenComplete.text=Play a sound when all downloads are complete
-checkUseProxyList.text=&Use Proxy List*
+checkUseProxyList.text=&Use Proxy List
 checkForNewVersion.text=Check for new &version automatically
 checkAllowOnlyOneInstance.text=&Allow only one instance
 checkHideWhenMinimized.text=&Minimize to tray
