@@ -25,7 +25,7 @@ miscBtnAction.Action.text=&Různé
 miscBtnAction.Action.largeIcon=${iconsPath}miscellanous.gif
 
 
-btnSelectConnectionProxy.Action.text=Konfigurovat proxy...*
+btnSelectConnectionProxy.Action.text=Konfigurovat proxy...
 
 btnSelectProxyListAction.Action.text=${null}
 btnSelectProxyListAction.Action.shortDescription=Vybrat seznam proxy
@@ -44,7 +44,7 @@ checkPlaySoundInCaseOfError.text=Přehrát zvuk v případě &chyby
 checkContinueInterrupted.text=Pokračovat ve stahování nedokončených souborů po startu apl&ikace
 
 checkPlaySoundWhenComplete.text=Přehrát zvuk po dokončení stahování všech souborů
-checkUseProxyList.text=Použít &seznam proxy*
+checkUseProxyList.text=Použít &seznam proxy
 checkForNewVersion.text=Kontrolovat automaticky nové &verze
 checkAllowOnlyOneInstance.text=Povolit pouze jednu inst&anci programu
 checkHideWhenMinimized.text=&Minimalizovat do oznamovací oblasti
