@@ -25,7 +25,7 @@ miscBtnAction.Action.text=&Rôzne
 miscBtnAction.Action.largeIcon=${iconsPath}miscellanous.gif
 
 
-btnSelectConnectionProxy.Action.text=Konfigurovať proxy...*
+btnSelectConnectionProxy.Action.text=Konfigurovať proxy...
 btnSelectProxyListAction.Action.text=${null}
 btnSelectProxyListAction.Action.shortDescription=Vybrať zoznam proxy
 btnSelectProxyListAction.Action.smallIcon=${iconsPath}open_small.gif
@@ -43,7 +43,7 @@ checkPlaySoundInCaseOfError.text=Prehrať zvuk v prípade &chyby
 checkContinueInterrupted.text=Pokračovať v sťahovaní nedokončených súborov po šatrte apl&ikácie
 
 checkPlaySoundWhenComplete.text=Prehrať zvuk po dokončení sťahovania všetkých súborov
-checkUseProxyList.text=Použiť &zoznam proxy*
+checkUseProxyList.text=Použiť &zoznam proxy
 checkForNewVersion.text=Kontrolovať automaticky nové &verzie
 checkAllowOnlyOneInstance.text=Povoliť len jednu inšt&anciu programu
 checkHideWhenMinimized.text=&Minimalizovať do oznamovacej oblasti
